THE INCEPTION WORK ON VM

--- a/srcs/.env
+++ b/srcs/.env
@@ -4,7 +4,7 @@ DATABASE_NAME=global_db
 USER_DB_NAME=sinshi
 USER_DB_PWD=pass_Sin12
 
-DOMAINE_NAME=localhost
+DOMAINE_NAME=zakbouha.42.fr
 
 # WORDPRESS ENV-VAR
 DB_HOST=mariadb
