--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 443 ssl;
     ssl_protocols    TLSv1.3 TLSv1.2;
-    server_name      localhost;
+    server_name      localhost zakbouha.42.fr;
 
     ssl_certificate         /etc/ssl/certs/nginx-selfsigned.crt;
     ssl_certificate_key     /etc/ssl/private/nginx-selfsigned.key;
